유사도 추출로직 수정